<resources>
    <string name="app_name">Oneness Heart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="jost_regular">font/font_jost_bold</string>
    <string name="facebook_app_id">2327202777455632</string>
    <string name="fb_login_protocol_scheme">fb2327202777455632</string>
    <string name="facebook_client_token">0f98eaeeff4013e92f2fd6297fba0f33</string>
    <string name="password_strength_caption">Password Strength: {0}</string>
    <string name="password_strength_weak">Weak Password</string>
    <string name="password_strength_medium">Can Be Stronger</string>
    <string name="password_strength_strong">Strong Password</string>
    <string name="notification_channel_ohter">Tao Calligraphy app notification channel</string>
    <string name="notification_channel_description">Manage all notification with this channel name</string>
    <string name="home_is_where_the_heart_is">Home is\nwhere the Heart is.</string>
    <string name="home_is">Home is\nwhere the</string>
    <string name="heart">Heart</string>
    <string name="str_is">is.</string>
    <string name="welcome_home">Welcome Home.</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home.</string>
    <string name="begin_your_experience">Begin Your Experience</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_to_the_heart_of_transformation">Get to the Heart\nof Transformation.</string>
    <string name="step_into_the">Step into the</string>
    <string name="heart_of_wellbeing">Heart \nof Wellbeing.</string>
    <string name="of_transformation">of Transformation.</string>
    <string name="lorem_ipsum_dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus nulla pellentesque est gravida elit convallis.</string>
    <string name="experience_more">EXPERIENCE MORE</string>
    <string name="release_stress">Release Stress</string>
    <string name="meditate_with_the_light_of_the_moon">Meditate with the light of the moon, mountains and ocean, along with the transformative art field of Greatest Love, to melt away stress…</string>
    <string name="swipe_up_for_more">Swipe Up for More</string>
    <string name="the_inner_calm">The inner calm you’re feeling is always there, in the deepest part of you - your true nature.\n\nWe are here to help you unlock and access this secret power on demand.\n\nImagine reconnecting with this feeling, and more, at the touch of a button.</string>
    <string name="a_unique_wellness_library_awaits_you">A Unique Wellness Library Awaits You.</string>
    <string name="tap_a_category_to_see_your_selections_below">Tap a category to see your selections below.</string>
    <string name="videos">Videos</string>
    <string name="video">Video</string>
    <string name="videos_not_available">No Videos found</string>
    <string name="guided_audio">Guided Audio</string>
    <string name="guided_not_available">No Guided Audio found</string>
    <string name="music">Music</string>
    <string name="music_not_available">No Music found</string>
    <string name="more_ways_to_grow">More Ways To Grow</string>
    <string name="live_sessions">LIVE Sessions</string>
    <string name="a_worldwide_community_of_meditation_rooms_at_your_fingertips">A worldwide community of meditation rooms at your fingertips.</string>
    <string name="curated_programs">Curated Programs</string>
    <string name="designed_to_give_you_a_balanced_well_rounded_path_to_your_goals">Designed to give you a balanced, well-rounded path to your goals.</string>
    <string name="expert_coaching">Expert Coaching</string>
    <string name="book_one_on_one_time_with_tao_calligraphy_wellness_coaches_to_personalize_your_journey">Book one-on-one time with Tao Calligraphy Wellness Coaches to personalize your journey.</string>
    <string name="explain_free_trial_here">Explain free trial here</string>
    <string name="try_us_free">Try us free today! No commitment required.</string>
    <string name="start_your_free_trial_today">Start your free trial today!</string>
    <string name="explain_subscription_levels_and_prices">Explain subscription levels and prices</string>
    <string name="health">Health</string>
    <string name="relationships">Relationships</string>
    <string name="peak_performance">Peak Performance</string>
    <string name="business_and_finance">Business &amp; Finance</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="children_and_education">Children &amp; Education</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="delete_account_msg">Are you sure you want to delete account?</string>
    <string name="delete_msg">Are you sure you want to delete the playlist? You won\'t able to revert the changes.</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="and">and</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="or_continue_with">or continue with</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="login_with_underline"><u>Login</u></string>
    <string name="corporate">Corporate</string>
    <string name="personal">Personal</string>
    <string name="corporation_code">Corporation Code</string>
    <string name="password_strength">Password Strength</string>
    <string name="password_must_match">Passwords Must Match</string>
    <string name="password_do_not_match">Passwords Do Not Match</string>
    <string name="password_match">Passwords Match!</string>
    <string name="forgot_password_que"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_with_underline"><u>Sign Up</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Reset Password</string>
    <string name="enter_your_email_address_and_we_ll_send_you_a_reset_link">Enter your email address and we’ll send you a reset link.</string>
    <string name="continue_text">Continue</string>
    <string name="email_sent">Email Sent!</string>
    <string name="we_have_sent_reset_instructions_to">We have sent reset instructions to</string>
    <string name="check_your_email">Check your email!</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ready_to_start">%s, ready to get started?</string>
    <string name="intro_program">21-Day Intro Program</string>
    <string name="start_now">Start Now</string>
    <string name="later">later</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="access_it_from_profile">You can access it later from your profile.</string>
    <string name="more_for_user">More for %s</string>
    <string name="Subscribe_for_boost">Subscribe for these and many other ways to boost your wellness!</string>
    <string name="continue_free_trial">Continue Free Trial</string>
    <string name="meditation_text_bold">Practice free meditations</string>
    <string name="meditation_text_normal">and release what holds you back.</string>
    <string name="program_text_bold">Join a program</string>
    <string name="program_text_normal">to focus and reach your goals faster.</string>
    <string name="how_to_meditate_text_bold">Learn</string>
    <string name="how_to_meditate_text_normal">how transformative field meditations work.</string>
    <string name="profile_text_bold">Complete your profile</string>
    <string name="profile_text_normal">to find live sessions in your region.</string>
    <string name="go_to_my_profile">go to my profile</string>
    <string name="start_free_trial">start free trial</string>
    <string name="home_tab">Home</string>
    <string name="wellness_tab">Wellness</string>
    <string name="search_tab">Search</string>
    <string name="rooms_tab">Rooms</string>
    <string name="notification_tab">Notifications</string>
    <string name="new_release">New Releases</string>
    <string name="no_new_release">No New Releases found.</string>
    <string name="wellness_library">Wellness Library</string>
    <string name="see_all">See All</string>
    <string name="feature_session">Featured Sessions</string>
    <string name="live">Live</string>
    <string name="my_upcoming_sessions">My Upcoming Sessions</string>
    <string name="see_more">See More</string>
    <string name="daily_wisdom">Daily Wisdom</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="meditations">Meditations</string>
    <string name="live_session_small">Live Session</string>
    <string name="seems_offline">It seems you’re offline.</string>
    <string name="enjoy_download_meditations">You can still enjoy the meditations\nyou have downloaded.</string>
    <string name="reconnect">Reconnect</string>
    <string name="view_downloads">VIEW DOWNLOADS</string>
    <string name="press_again_to_exit">Press again to exit.</string>
    <string name="alerts">Alerts</string>
    <string name="notifications">Notifications</string>
    <string name="alarm">Alarm</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="less">LESS</string>
    <string name="clear">CLEAR</string>
    <string name="clear_all_notification">CLEAR ALL\nNOTIFICATIONS?</string>
    <string name="yes_clear">YES, CLEAR</string>
    <string name="no_keep">No, Keep</string>
    <string name="no_notifications">You have no notifications</string>
    <string name="goto_alarm">Go to Alarm</string>
    <string name="about">About</string>
    <string name="reviews">Reviews</string>
    <string name="lorem_meditation_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum lacinia luctus risus pharetra dui elementum ornare. Arcu ut interdum ullamcorper.</string>
    <string name="are_you_sure">ARE YOU SURE?</string>
    <string name="clear_mind">Breathwork for a Clear Mind</string>
    <string name="on">on</string>
    <string name="wll_canceled">will be canceled.</string>
    <string name="notify_followers">Notify Followers</string>
    <string name="yes_cancel_it">Yes, Cancel It</string>
    <string name="continue_editing">No, Continue Editing</string>
    <string name="may_22_2022">May 22, 2022</string>
    <string name="mindfulness_for_nit_professionals">Mindfulness for\nIT Professionals</string>
    <string name="we_ve_received_your_request_n_nyour_room_will_be_reviewed_by_our_team_before_it_can_be_approved_n_nthank_you_for_your_heart_of_service_to_the_community">We’ve received your request.\n\nYour room will be reviewed by our team before it can be approved.\n\nThank you for your heart of service to the community!</string>
    <string name="back_to_rooms">BACK TO ROOMS</string>
    <string name="adjust_speed">Adjust Speed</string>
    <string name="slower">Slower</string>
    <string name="faster">Faster</string>
    <string name="speed_0_5">0.5</string>
    <string name="speed_0_75">0.75</string>
    <string name="speed_1_0">1.0</string>
    <string name="speed_1_5">1.5</string>
    <string name="speed_2_0">2.0</string>
</resources>