<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/nsvPendingApprovalRoom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/_20sdp"
                android:src="@drawable/vd_cross_gray"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewJostMediumStyle"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/mindfulness_for_nit_professionals"
                android:textColor="@color/secondary_black"
                android:textSize="@dimen/_22ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewJostRegularStyle"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/we_ve_received_your_request_n_nyour_room_will_be_reviewed_by_our_team_before_it_can_be_approved_n_nthank_you_for_your_heart_of_service_to_the_community"
                android:textColor="@color/secondary_black"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvBackToRoom"
                style="@style/CardViewStyle"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="0dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBackToRoom"
                    style="@style/ButtonGoldStyle"
                    android:background="@drawable/bg_light_dark_golden_curve"
                    android:text="@string/back_to_rooms" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </RelativeLayout>

</layout>