<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/_15sdp"
                android:paddingTop="@dimen/_30sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextViewJostMediumStyle"
                    android:gravity="center"
                    android:text="@string/clear_all_notification"
                    android:textAllCaps="true"
                    android:textColor="@color/neutral_900"
                    android:textSize="@dimen/_18ssp" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/CardViewStyle"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="0dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnYes"
                        style="@style/ButtonGoldStyle"
                        android:background="@drawable/bg_light_dark_golden_curve"
                        android:text="@string/yes_clear" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/CardViewStyle"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="0dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnNo"
                        style="@style/ButtonWhiteStyle"
                        android:background="@drawable/bg_white_curve"
                        android:text="@string/no_keep"
                        android:textAllCaps="false"
                        android:textColor="@color/medium_grey"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</layout>
